Web: Allow management of all machines with a hack.
And not just a single random one.  This is achieved by giving a hint
which client to use as the singleton legacy client and then reloading
the application.  This isn't pretty, but works.

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -106,7 +106,7 @@ along with Cockpit; If not, see <http://www.gnu.org/licenses/>.
           <div id="server-actions-menu"
                data-corners="false" data-history="false" data-role="popup">
             <div data-role="controlgroup" style="margin-top:0;margin-bottom:0">
-              <button translatable="yes" class="first-ready" data-op="manage">Manage</button>
+              <button translatable="yes" class="ready" data-op="manage">Manage</button>
               <button translatable="yes" class="closed" data-op="connect">Connect</button>
               <button translatable="yes" class="ready" data-op="disconnect">Disconnect</button>
               <button translatable="yes" class="always" data-op="remove">Remove</button>
